--- a/artivity-explorer/app.config
+++ b/artivity-explorer/app.config
@@ -4,7 +4,7 @@
     <section name="TrinitySettings" type="Semiodesk.Trinity.Configuration.TrinitySettings, Semiodesk.Trinity" />
   </configSections>
   <connectionStrings>
-    <add name="virt0" providerName="Semiodesk.Trinity" connectionString="provider=virtuoso;host=localhost;port=1111;uid=dba;pw=dba;rule=urn:semiodesk/ruleset" />
+    <add name="virt0" providerName="Semiodesk.Trinity" connectionString="provider=virtuoso;host=localhost;port=8273;uid=dba;pw=dba;rule=urn:semiodesk/ruleset" />
   </connectionStrings>
   <TrinitySettings namespace="ArtivityExplorer">
     <OntologySettings>
@@ -33,4 +33,16 @@
       </RuleSets>
     </VirtuosoStoreSettings>
   </TrinitySettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="OpenLink.Data.Virtuoso" publicKeyToken="6654f6917d07cb95" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.2.1.0" newVersion="7.2.1.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
