--- a/artivity-apid/packages.config
+++ b/artivity-apid/packages.config
@@ -4,11 +4,15 @@
   <package id="dotNetRDF" version="1.0.9.3683" targetFramework="net40" />
   <package id="dotNetRDF.Data.Virtuoso" version="1.0.9.3683" targetFramework="net40" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net40" />
+  <package id="ini-parser" version="2.2.2" targetFramework="net40" />
   <package id="Nancy" version="1.4.1" targetFramework="net40" />
   <package id="Nancy.Hosting.Self" version="1.4.1" targetFramework="net40" />
   <package id="Nancy.Serialization.JsonNet" version="1.4.1" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net40" />
   <package id="OpenLink.Data.Virtuoso" version="7.20.3214.1" targetFramework="net40" />
   <package id="Semiodesk.Trinity.Core" version="0.9.107" targetFramework="net40" />
+  <package id="TinyVirtuoso" version="0.3.25" targetFramework="net40" />
+  <package id="TinyVirtuoso.osx" version="7.2.2" targetFramework="net40" />
+  <package id="TinyVirtuoso.win" version="7.2.1" targetFramework="net40" />
   <package id="VDS.Common" version="1.6.0" targetFramework="net40" />
 </packages>
