--- a/artivity-apid/Artivity.Apid.csproj
+++ b/artivity-apid/Artivity.Apid.csproj
@@ -8,7 +8,7 @@
     <RootNamespace>Artivity.Api.Http</RootNamespace>
     <AssemblyName>artivity-apid</AssemblyName>
     <ReleaseVersion>1.5.20</ReleaseVersion>
-    <StartupObject>Artivity.Api.Http.Programm</StartupObject>
+    <StartupObject>Artivity.Api.Http.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <Optimize>false</Optimize>
@@ -75,7 +75,7 @@
   <ItemGroup>
     <Compile Include="Parameters\ActivityParameters.cs" />
     <Compile Include="HttpService.cs" />
-    <Compile Include="Programm.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Modules\ModuleBase.cs" />
     <Compile Include="Parameters\AgentParameters.cs" />
