Apid can now run as LOCALSYSTEM service.

--- a/artivity-apid/packages.config
+++ b/artivity-apid/packages.config
@@ -5,6 +5,7 @@
   <package id="dotNetRDF.Data.Virtuoso" version="1.0.9.3683" targetFramework="net40" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net40" />
   <package id="ini-parser" version="2.2.2" targetFramework="net40" />
+  <package id="log4net" version="2.0.5" targetFramework="net40" />
   <package id="Nancy" version="1.4.1" targetFramework="net40" />
   <package id="Nancy.Hosting.Self" version="1.4.1" targetFramework="net40" />
   <package id="Nancy.Serialization.JsonNet" version="1.4.1" targetFramework="net40" />
