--- a/artivity-datamodel/Artivity.DataModel.csproj
+++ b/artivity-datamodel/Artivity.DataModel.csproj
@@ -26,6 +26,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="IModelProvider.cs" />
     <Compile Include="ObjectModel\Person.cs" />
     <Compile Include="ObjectModel\Activity.cs" />
     <Compile Include="Ontologies\Ontologies.g.cs">
