Prepared for release build

--- a/artivity-datamodel/Artivity.DataModel.csproj
+++ b/artivity-datamodel/Artivity.DataModel.csproj
@@ -22,8 +22,10 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release</OutputPath>
+    <OutputPath>..\Output\</OutputPath>
     <WarningLevel>4</WarningLevel>
+    <DefineConstants>
+    </DefineConstants>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="IModelProvider.cs" />
