--- a/Artivity.WinService/Artivity.WinService.csproj
+++ b/Artivity.WinService/Artivity.WinService.csproj
@@ -52,6 +52,12 @@
     <Compile Include="ArtivityService.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Plugin\InstallationWatchdog.cs" />
+    <Compile Include="Plugin\InstalledPrograms.cs" />
+    <Compile Include="Plugin\PluginChecker.cs" />
+    <Compile Include="Plugin\PluginManifest.cs" />
+    <Compile Include="Plugin\RegistryEntry.cs" />
+    <Compile Include="Plugin\RegistryMonitor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Win32.cs" />
@@ -71,7 +77,11 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
+    <None Include="Plugin\Manifest.xsd">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
